# libpmu

./: .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  WORKSPACE.bazel  build.rs
example/: simple_stat.rs
examples/cpp/: simple_stat.cpp
examples/rust/: list_events.rs  simple_stat.rs
interop/cpp/include/pmu/: pmu.h  pmu.hpp  pmu_enums.h
src/: ffi.rs  lib.rs
src/backends/: kperf.rs  mod.rs  perf.rs
src/events/: amd_fam17h_zen1.rs  intel_icl.rs  mod.rs
src/events/amd/: zen1.yaml
src/events/intel/: ice_lake.yaml
src/events/sifive/: u7.yaml
