load("@crate_index_cargo_local//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_static_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    deps = all_crate_deps(build = True), 
    data = ["interop/cpp/include/pmu/pmu_enums.h"],
)

rust_library(
    name = "pmu",
    crate_name = "libpmu",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [":build_script"] + all_crate_deps(normal = True),
)

rust_static_library(
    name = "pmu_static",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [":build_script"] + all_crate_deps(normal = True),
)

rust_binary(
  name = "simple_stat_rust",
  srcs = ["examples/rust/simple_stat.rs"],
  deps = [":pmu"],
)

cc_library(
  name = "pmu_cpp",
  hdrs = [
    "interop/cpp/include/pmu/pmu_enums.h",
    "interop/cpp/include/pmu/pmu.h",
    "interop/cpp/include/pmu/pmu.hpp",
  ],
  strip_include_prefix = "interop/cpp/include",
  deps = [":pmu_static"],
  copts = ["-std=c++17"]
)

cc_binary(
  name = "simple_stat_cpp",
  srcs = [
    "examples/cpp/simple_stat.cpp",
  ],
  deps = [":pmu_cpp"],
  copts = ["-std=c++17"]
)
