[package]
name = "libpmu"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple_stat"
path = "examples/rust/simple_stat.rs"

[[example]]
name = "list_events"
path = "examples/rust/list_events.rs"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
dlopen2 = "0.4.1"
libc = "0.2.144"
perf-event-open-sys2 = { git = "https://github.com/perf-toolbox/perf-event.git" }

[build-dependencies]
bindgen = "0.65.1"
serde_yaml = "0.9.21"
serde = { version = "1.0.163", features = ["derive"] }
glob = "0.3.1"
